force-app BACKUP_DELETE/main/default/objects/Offer__c/fields/Annual_Salary_Agreed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Annual_Salary_Agreed_Amount__c</fullName>
    <label>Annual Salary Agreed Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>