force-app BACKUP_DELETE/main/default/objects/Offer__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <inlineHelpText>Expiration Date for this Offer</inlineHelpText>
    <label>Expiration Date</label>
    <type>DateTime</type>
</CustomField>