force-app BACKUP_DELETE/main/default/objects/Offer__c/fields/Number_of_Interviews__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Interviews__c</fullName>
    <formula>Candidate__r.Number_of_Interviews__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Interviews</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>